k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: simgerchev-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: simgerchev-website-20260208-190638
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: simgerchev-website
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 5173
      targetPort: 5173
  type: ClusterIP
