k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-website
  namespace: __NAMESPACE__
  labels:
    app: main-website
spec:
  type: ClusterIP
  selector:
    app: main-website
  ports:
    - name: http
      port: 80
      targetPort: 80
