k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-website
  namespace: __NAMESPACE__
  labels:
    app: main-website
spec:
  ingressClassName: traefik
  rules:
    - host: __INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-website
                port:
                  number: 80
